Fixing bug 243213. Don't waste time looking up the nsIURIFixup service for every docshell, and move some members around to make things align up and pack better on some 64-bit platforms. r=bzbarsky@mit.edu, sr=darin@meer.net